# modo

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
